cmake_minimum_required(VERSION 3.17)
project(C-Review)

set(CMAKE_CXX_STANDARD 98)

add_executable(C List_malloc.cpp )
add_executable(List_insert List_insert.cpp)
add_executable(List_delete List_delete.cpp)
add_executable(List_GetElem List_GetElem.cpp)
add_executable(List_LocateElem List_LocateElem.cpp)
add_executable(LinkList_insert LinkList_insert.cpp)
add_executable(LikList_behindInsert LikList_behindInsert.cpp)
add_executable(LinkLList_frontinsert LinkLList_frontinsert.cpp)
add_executable(ListDelete ListDelete.cpp)
add_executable(LinkList_GetElem LinkList_GetElem.cpp)
add_executable(LinkList_LocateElem LinkList_LocateElem.cpp)
add_executable(LinkList_length LinkList_length.cpp)
add_executable(LinkList_Taillnsert LinkList_Taillnsert.cpp)
add_executable(DLinkList_Init.cpp DLinkList_Init.cpp)
add_executable(DLink_delete DLink_delete.cpp)
add_executable(DLinkList_Init DLinkList_Init.cpp)
add_executable(DLink_DestoryList DLink_DestoryList.cpp)

add_executable(Offer24 LeetCode/Offer24.cpp)
add_executable(Offer24-Solution LeetCode/Offer24-Solution.cpp)
add_executable(Offer18_deleteNode LeetCode/Offer18_deleteNode.cpp)
add_executable(Offer06_reversePrint LeetCode/Offer06_reversePrint.cpp)
add_executable(Offer25_mergeTwoLists LeetCode/Offer25_mergeTwoLists.cpp)
add_executable(Offer22_getKthFromEnd LeetCode/Offer22_getKthFromEnd.cpp)
add_executable(Offer52_getIntersectionNode LeetCode/Offer52_getIntersectionNode.cpp)
add_executable(Num876_middleNode LeetCode/Num876_middleNode.cpp)
add_executable(Num237_deleteNode LeetCode/Num237_deleteNode.cpp)