cmake_minimum_required(VERSION 3.17)
project(C-Review)

set(CMAKE_CXX_STANDARD 98)

add_executable(C List_malloc.cpp )
add_executable(List_insert List_insert.cpp)
add_executable(List_delete List_delete.cpp)
add_executable(List_GetElem List_GetElem.cpp)
add_executable(List_LocateElem List_LocateElem.cpp)
add_executable(LinkList_insert LinkList_insert.cpp)
add_executable(LikList_behindInsert LikList_behindInsert.cpp)
add_executable(LinkLList_frontinsert LinkLList_frontinsert.cpp)
add_executable(ListDelete ListDelete.cpp)
add_executable(LinkList_GetElem LinkList_GetElem.cpp)
add_executable(LinkList_LocateElem LinkList_LocateElem.cpp)
add_executable(LinkList_length LinkList_length.cpp)
add_executable(LinkList_Taillnsert LinkList_Taillnsert.cpp)
add_executable(DLinkList_Init.cpp DLinkList_Init.cpp)
add_executable(DLink_delete DLink_delete.cpp)
add_executable(DLinkList_Init DLinkList_Init.cpp)
add_executable(DLink_DestoryList DLink_DestoryList.cpp)

add_executable(Offer24 LeetCode/Offer24.cpp)
add_executable(Offer24-Solution LeetCode/Offer24-Solution.cpp)
add_executable(Offer18_deleteNode LeetCode/Offer18_deleteNode.cpp)
add_executable(Offer06_reversePrint LeetCode/Offer06_reversePrint.cpp)
add_executable(Offer25_mergeTwoLists LeetCode/Offer25_mergeTwoLists.cpp)
add_executable(Offer22_getKthFromEnd LeetCode/Offer22_getKthFromEnd.cpp)
add_executable(Offer52_getIntersectionNode LeetCode/Offer52_getIntersectionNode.cpp)
add_executable(Facial02.05_addTwoNumbers LeetCode/Facial02.05_addTwoNumbers.cpp)
add_executable(Num876_middleNode LeetCode/Num876_middleNode.cpp)
add_executable(Num237_deleteNode LeetCode/Num237_deleteNode.cpp)
add_executable(Num21_mergeTwoLists LeetCode/Num21_mergeTwoLists.cpp)
add_executable(Num203_removeElements LeetCode/Num203_removeElements.cpp)
add_executable(Num1290_getDecimalValue LeetCode/Num1290_getDecimalValue.cpp)
add_executable(Num234_isPalindrome LeetCode/Num234_isPalindrome.cpp)
add_executable(Num141_hasCycle LeetCode/Num141_hasCycle.cpp)
add_executable(OddList OddList.cpp)
add_executable(OddDlinkList OddDlinkList.cpp)
add_executable(StaticLinkList StaticLinkList.cpp)
add_executable(3.1.2_Sqstack 3.1.2_Sqstack.cpp)
add_executable(3.1.2_ShStack 3.1.2_ShStack.cpp)
add_executable(3.2.2_Squeue 3.2.2_Squeue.cpp)
add_executable(Offer30_MinStack LeetCode/Offer30_MinStack.cpp)
add_executable(3.2.3_LinkQueue 3.2.3_LinkQueue.cpp)
add_executable(P2181 luogu/P2181.cpp)
add_executable(P5703  "luogu/P5703 .cpp")
add_executable(P5704  "luogu/P5704 .cpp")
add_executable(P5705 luogu/P5705.cpp)
add_executable(P5706 luogu/P5706.cpp)
add_executable(P3156 luogu/P3156.cpp)
add_executable(P19_2.1 wangdao/P19_2.1.cpp)
add_executable(P19_2.2 wangdao/P19_2.2.cpp)
add_executable(P19_2.3 wangdao/P19_2.3.cpp)
add_executable(P19_2.4 wangdao/P19_2.4.cpp)
add_executable(P19_2.5 wangdao/P19_2.5.cpp)
add_executable(P19_2.6 wangdao/P19_2.6.cpp)
add_executable(P19_2.7 wangdao/P19_2.7.cpp)
add_executable(P19_2.8 wangdao/P19_2.8.cpp)
add_executable(P19_2.10 wangdao/P19_2.10.cpp)
add_executable(P19_2.11 wangdao/P19_2.11.cpp)
add_executable(P19_2.12 wangdao/P19_2.12.cpp)
add_executable(P19_2.13 wangdao/P19_2.13.cpp)
add_executable(P40_2.1 wangdao/P40_2.1.cpp)
add_executable(P40_2.2 wangdao/P40_2.2.cpp)
add_executable(P40_2.3 wangdao/P40_2.3.cpp)
add_executable(P40_2.4 wangdao/P40_2.4.cpp)