cmake_minimum_required(VERSION 3.17)
project(C-Review)

set(CMAKE_CXX_STANDARD 98)

add_executable(C List_malloc.cpp )
add_executable(List_insert List_insert.cpp)
add_executable(List_delete List_delete.cpp)
add_executable(List_GetElem List_GetElem.cpp)
add_executable(List_LocateElem List_LocateElem.cpp)
add_executable(LinkList_insert LinkList_insert.cpp)
add_executable(LikList_behindInsert LikList_behindInsert.cpp)
add_executable(LinkLList_frontinsert LinkLList_frontinsert.cpp)
add_executable(ListDelete ListDelete.cpp)
add_executable(LinkList_GetElem LinkList_GetElem.cpp)
add_executable(LinkList_LocateElem LinkList_LocateElem.cpp)
add_executable(LinkList_length LinkList_length.cpp)
add_executable(LinkList_Taillnsert LinkList_Taillnsert.cpp)
add_executable(DLinkList_Init.cpp DLinkList_Init.cpp)
add_executable(DLink_delete DLink_delete.cpp)
add_executable(DLinkList_Init DLinkList_Init.cpp)
add_executable(DLink_DestoryList DLink_DestoryList.cpp)

add_executable(Offer24 LeetCode/Offer24.cpp)
add_executable(Offer24-Solution LeetCode/Offer24-Solution.cpp)
add_executable(Offer18_deleteNode LeetCode/Offer18_deleteNode.cpp)
add_executable(Offer06_reversePrint LeetCode/Offer06_reversePrint.cpp)
add_executable(Offer25_mergeTwoLists LeetCode/Offer25_mergeTwoLists.cpp)
add_executable(Offer22_getKthFromEnd LeetCode/Offer22_getKthFromEnd.cpp)
add_executable(Offer52_getIntersectionNode LeetCode/Offer52_getIntersectionNode.cpp)
add_executable(Facial02.05_addTwoNumbers LeetCode/Facial02.05_addTwoNumbers.cpp)
add_executable(Num876_middleNode LeetCode/Num876_middleNode.cpp)
add_executable(Num237_deleteNode LeetCode/Num237_deleteNode.cpp)
add_executable(Num21_mergeTwoLists LeetCode/Num21_mergeTwoLists.cpp)
add_executable(Num203_removeElements LeetCode/Num203_removeElements.cpp)
add_executable(Num1290_getDecimalValue LeetCode/Num1290_getDecimalValue.cpp)
add_executable(Num234_isPalindrome LeetCode/Num234_isPalindrome.cpp)
add_executable(Num141_hasCycle LeetCode/Num141_hasCycle.cpp)
add_executable(OddList OddList.cpp)
add_executable(OddDlinkList OddDlinkList.cpp)
add_executable(StaticLinkList StaticLinkList.cpp)
add_executable(3.1.2_Sqstack 3.1.2_Sqstack.cpp)
add_executable(3.1.2_ShStack 3.1.2_ShStack.cpp)
add_executable(3.2.2_Squeue 3.2.2_Squeue.cpp)
add_executable(Offer30_MinStack LeetCode/Offer30_MinStack.cpp)
add_executable(3.2.3_LinkQueue 3.2.3_LinkQueue.cpp)
add_executable(P2181 luogu/P2181.cpp)
add_executable(P5703  "luogu/P5703 .cpp")
add_executable(P5704  "luogu/P5704 .cpp")
add_executable(P5705 luogu/P5705.cpp)
add_executable(P5706 luogu/P5706.cpp)
add_executable(P3156 luogu/P3156.cpp)
add_executable(P19_2.1 wangdao/P19_2.1.cpp)
add_executable(P19_2.2 wangdao/P19_2.2.cpp)
add_executable(P19_2.3 wangdao/P19_2.3.cpp)
add_executable(P19_2.4 wangdao/P19_2.4.cpp)
add_executable(P19_2.5 wangdao/P19_2.5.cpp)
add_executable(P19_2.6 wangdao/P19_2.6.cpp)
add_executable(P19_2.7 wangdao/P19_2.7.cpp)
add_executable(P19_2.8 wangdao/P19_2.8.cpp)
add_executable(P19_2.10 wangdao/P19_2.10.cpp)
add_executable(P19_2.11 wangdao/P19_2.11.cpp)
add_executable(P19_2.12 wangdao/P19_2.12.cpp)
add_executable(P19_2.13 wangdao/P19_2.13.cpp)
add_executable(P40_2.1 wangdao/P40_2.1.cpp)
add_executable(P40_2.2 wangdao/P40_2.2.cpp)
add_executable(P40_2.3 wangdao/P40_2.3.cpp)
add_executable(P40_2.4 wangdao/P40_2.4.cpp)
add_executable(P40_2.5 wangdao/P40_2.5.cpp)
add_executable(P40_2.6 wangdao/P40_2.6.cpp)
add_executable(P40_2.7 wangdao/P40_2.7.cpp)
add_executable(P40_2.8 wangdao/P40_2.8.cpp)
add_executable(P40_2.9 wangdao/P40_2.9.cpp)
add_executable(P40_2.10 wangdao/P40_2.10.cpp)
add_executable(P40_2.11 wangdao/P40_2.11.cpp)
add_executable(P40_2.12 wangdao/P40_2.12.cpp)
add_executable(P40_2.13 wangdao/P40_2.13.cpp)
add_executable(P40_2.14 wangdao/P40_2.14.cpp)
add_executable(P40_2.15 wangdao/P40_2.15.cpp)
add_executable(P40_2.16 wangdao/P40_2.16.cpp)
add_executable(P40_2.17 wangdao/P40_2.17.cpp)
add_executable(P40_2.18 wangdao/P40_2.18.cpp)
add_executable(P40_2.19 wangdao/P40_2.19.cpp)
add_executable(P40_2.20 wangdao/P40_2.20.cpp)
add_executable(P40_2.21 wangdao/P40_2.21.cpp)
add_executable(P40_2.22 wangdao/P40_2.22.cpp)
add_executable(P40_2.23 wangdao/P40_2.23.cpp)
add_executable(P40_2.24 wangdao/P40_2.24.cpp)
add_executable(P40_2.25 wangdao/P40_2.25.cpp)
add_executable(P5788 luogu/P5788.cpp)
add_executable(P4387 luogu/P4387.cpp)
add_executable(3.3.1_Bracket_Stack 3.3.1_Bracket_Stack.cpp)
add_executable(3.3.3_Clion 3.3.3_Clion.cpp)
add_executable(4.1.2_StringNode 4.1.2_StringNode.cpp)
add_executable(4.2.1_Index 4.2.1_Index.cpp)
add_executable(4.2.3_Index_KMP "4.2.3_Index_KMP.cpp")
add_executable(5.3.1_PreOrder 5.3.1_PreOrder.cpp)
add_executable(P71_2.3.2 wangdao/P71_2.3.2.cpp)
add_executable(P71_2.4 wangdao/P71_2.4.cpp)
add_executable(P71_2.5 wangdao/P71_2.5.cpp)
add_executable(P85_2.1 wangdao/P85_2.1.cpp)
add_executable(P85_2.2 wangdao/P85_2.2.cpp)
add_executable(P85_2.3 wangdao/P85_2.3.cpp)
add_executable(P85_2.5 wangdao/P85_2.5.cpp)
add_executable(P96_2.1 wangdao/P96_2.1.cpp)
add_executable(P96_2.2 wangdao/P96_2.2.cpp)
add_executable(P96_2.3 wangdao/P96_2.3.cpp)
add_executable(P96_2.4 wangdao/P96_2.4.cpp)
add_executable(Num150_evalRPN LeetCode/Num150_evalRPN.cpp)
add_executable(5.3.2_ThreadNode 5.3.2_ThreadNode.cpp)
add_executable(5.4.1._PTNode 5.4.1._PTNode.cpp)
add_executable(Offer09_CQueue LeetCode/Offer09_CQueue.cpp)
add_executable(5.4.4_UFSets 5.4.4_UFSets.cpp)
add_executable(Offer31_validateStackSequences LeetCode/Offer31_validateStackSequences.cpp)
add_executable(Num1172_DinnerPlates LeetCode/Num1172_DinnerPlates.cpp)
add_executable(Facial03.05_SortedStack LeetCode/Facial03.05_SortedStack.cpp)
add_executable(5.5.1_BST 5.5.1_BST.cpp)
add_executable(Facial03.04_MyQueue LeetCode/Facial03.04_MyQueue.cpp)
add_executable(Num225_MyStack LeetCode/Num225_MyStack.cpp)
add_executable(5.5.2_Judge_AVL 5.5.2_Judge_AVL.cpp)
add_executable(P134_2.5 wangdao/P134_2.5.cpp)
add_executable(Offer55_isBalanced LeetCode/Offer55_isBalanced.cpp)
add_executable(Num232_MyQueue LeetCode/Num232_MyQueue.cpp)
add_executable(P149_2.3 wangdao/P149_2.3.cpp)
add_executable(Num1441_buildArray LeetCode/Num1441_buildArray.cpp)
add_executable(Facial03.01_TripleInOne LeetCode/Facial03.01_TripleInOne.cpp)
add_executable(Num1700_countStudents LeetCode/Num1700_countStudents.cpp)
add_executable(Facial08.06_hanota LeetCode/Facial08.06_hanota.cpp)
add_executable(Offer55-1_maxDepth LeetCode/Offer55-1_maxDepth.cpp)
add_executable(Offer57_findContinuousSequence LeetCode/Offer57_findContinuousSequence.cpp)
add_executable(P149_2.4 wangdao/P149_2.4.cpp)
add_executable(Num102_levelOrder LeetCode/Num102_levelOrder.cpp)
add_executable(P149_2.5 wangdao/P149_2.5.cpp)
add_executable(P149_2.6 wangdao/P149_2.6.cpp)
add_executable(Offer07_buildTree LeetCode/Offer07_buildTree.cpp)
add_executable(P149_2.7 wangdao/P149_2.7.cpp)
add_executable(P149_2.8 wangdao/P149_2.8.cpp)
add_executable(P149_2.9 wangdao/P149_2.9.cpp)
add_executable(Offer27_mirrorTree LeetCode/Offer27_mirrorTree.cpp)
add_executable(P149_2.10 wangdao/P149_2.10.cpp)
add_executable(P149_2.11 wangdao/P149_2.11.cpp)
add_executable(P149_2.12 wangdao/P149_2.12.cpp)
add_executable(Offer68_lowestCommonAncestor LeetCode/Offer68_lowestCommonAncestor.cpp)
add_executable(P149_2.13 wangdao/P149_2.13.cpp)
add_executable(P149_2.14 wangdao/P149_2.14.cpp)

add_executable(P149_2.15 wangdao/P149_2.15.cpp)
add_executable(P149_2.16 wangdao/P149_2.16.cpp)
add_executable(P149_2.17 wangdao/P149_2.17.cpp)
add_executable(Num100_isSameTree LeetCode/Num100_isSameTree.cpp)
add_executable(P149_2.18 wangdao/P149_2.18.cpp)
add_executable(P149_2.19 wangdao/P149_2.19.cpp)
add_executable(P149_2.20 wangdao/P149_2.20.cpp)
add_executable(P3367 luogu/P3367.cpp)
add_executable(P177_2.5 wangdao/P177_2.5.cpp)
add_executable(P177_2.6 wangdao/P177_2.6.cpp)
add_executable(P177_2.7 wangdao/P177_2.7.cpp)
add_executable(P195_2.6 wangdao/P195_2.6.cpp)
add_executable(P195_2.7 wangdao/P195_2.7.cpp)
add_executable(P195_2.8 wangdao/P195_2.8.cpp)
add_executable(P195_2.9 wangdao/P195_2.9.cpp)
add_executable(P195_2.10 wangdao/P195_2.10.cpp)
add_executable(P195_2.11 wangdao/P195_2.11.cpp)
add_executable(6.2.2_ArcNode 6.2.2_ArcNode.cpp)
add_executable(6.2.3_ARcNode 6.2.3_ARcNode.cpp)
add_executable(6.2.4_ArcNode 6.2.4_ArcNode.cpp)
add_executable(6.3.1_BFS 6.3.1_BFS.cpp)
add_executable(6.3.2_DFS 6.3.2_DFS.cpp)
add_executable(6.4.1_MST_Prim 6.4.1_MST_Prim.cpp)
add_executable(P232_2.2 wangdao/P232_2.2.cpp)
add_executable(P232_2.3 wangdao/P232_2.3.cpp)
add_executable(P232_2.4 wangdao/P232_2.4.cpp)
add_executable(P232_2.5 wangdao/P232_2.5.cpp)
add_executable(7.2.1_Search_Seq 7.2.1_Search_Seq.cpp)
add_executable(7.2.2_Binary_Search 7.2.2_Binary_Search.cpp)