cmake_minimum_required(VERSION 3.17)
project(LeetCode)

set(CMAKE_CXX_STANDARD 98)

add_executable(Offer24 LeetCode/Offer24.cpp)
add_executable(Offer24-Solution LeetCode/Offer24-Solution.cpp)
add_executable(Offer18_deleteNode LeetCode/Offer18_deleteNode.cpp)
add_executable(Offer06_reversePrint LeetCode/Offer06_reversePrint.cpp)
add_executable(Offer25_mergeTwoLists LeetCode/Offer25_mergeTwoLists.cpp)
add_executable(Offer22_getKthFromEnd LeetCode/Offer22_getKthFromEnd.cpp)